# ms-fabric-skills-dev-starter

./: .cursorrules  .gitignore  .gitleaksignore  .windsurfrules  AGENTS.md  CHECKLIST.md  CLAUDE.md  README.md  pyproject.toml
.agents/: instructions.md
.agents/agents/: FabricAdmin.agent.md  FabricDataEngineer.agent.md
.agents/common/: COMMON-CORE.md  SPARK-CONSUMPTION-CORE.md
.agents/prompts/: create-fabric-item.prompt.md  discover-workspace.prompt.md  scaffold-lakehouse.prompt.md
.agents/skills/activator-authoring-cli/: SKILL.md
.agents/skills/activator-authoring-cli/references/: action-types.md
.agents/skills/activator-consumption-cli/: SKILL.md
.agents/skills/fabric-api-discovery/: SKILL.md
.agents/skills/fabric-core/: SKILL.md
.agents/skills/fabric-lakehouse/: SKILL.md
.agents/skills/microsoft-code-reference/: SKILL.md
.agents/skills/spark-authoring-cli/resources/: notebook-api-operations.md
.agents/skills/spark-operations-cli/: SKILL.md
.agents/skills/spark-operations-cli/references/: diagnostic-workflow.md  jobinsight-api.md  pipeline-diagnosis.md
.github/: copilot-instructions.md
.github/workflows/: gitleaks.yml
mcp-setup/: README.md  mcp-config-template.json  register-fabric-mcp.ps1  register-fabric-mcp.sh
